# CS2-ShareCfg

./: CMakeLists.txt  README.md  main.cpp
